dev-ops/kubernetes/bids-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bids-deployment
  labels:
    app: bids
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bids
  template:
    metadata:
      labels:
        app: bids
    spec:
      containers:
        - name: bids
          image: autobidscloud/auto-bids:bids
          imagePullPolicy: "Always"
          ports:
            - containerPort: 4600
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
