dev-ops/kubernetes/cars-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-deployment
  labels:
    app: cars
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cars
  template:
    metadata:
      labels:
        app: cars
    spec:
      containers:
        - name: cars
          image: autobidscloud/auto-bids:cars
          imagePullPolicy: "Always"
          ports:
            - containerPort: 4200
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
