dev-ops/kubernetes/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: autobidscloud/auto-bids:chat
          imagePullPolicy: "Always"
          ports:
            - containerPort: 4500
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
