dev-ops/kubernetes/motorcycles-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motorcycles-deployment
  labels:
    app: motorcycles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motorcycles
  template:
    metadata:
      labels:
        app: motorcycles
    spec:
      containers:
        - name: motorcycles
          image: autobidscloud/auto-bids:motorcycles
          imagePullPolicy: Always
          ports:
            - containerPort: 4300
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
