dev-ops/kubernetes/profiles-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-deployment
  labels:
    app: profiles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          image: autobidscloud/auto-bids:profiles
          imagePullPolicy: "Always"
          ports:
            - containerPort: 4100
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
