dev-ops/kubernetes/cars-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cars-service
  labels:
    app: cars
spec:
  type: ClusterIP
  selector:
    app: cars
  ports:
    - name: http
      port: 4200
      targetPort: 4200
