dev-ops/kubernetes/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat
spec:
  type: ClusterIP
  selector:
    app: chat
  ports:
    - name: http
      port: 4500
      targetPort: 4500
