dev-ops/kubernetes/profiles-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profiles-service
  labels:
    app: profiles
spec:
  type: ClusterIP
  selector:
    app: profiles
  ports:
    - name: http
      port: 4100
      targetPort: 4100
